# energy-challenge

./: README.md  main.py  pyproject.toml
