[tool.poetry]
name = "btg-energy-challenge"
version = "0.1.0"
description = ""
authors = ["Henrique de Carvalho <decarv.henrique@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.8.4"
line-profiler = "^4.1.3"
seaborn = "^0.13.2"
jupyter = "^1.0.0"
notebook = "^7.1.3"

[tool.poetry.dev-dependencies]
pandas = "2.0.3"
numpy = "1.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"